--- a/style/porfolio.css
+++ b/style/porfolio.css
@@ -249,8 +249,10 @@ nav ul li {
 
 input,
 textarea {
-    display: block;
-    padding: 18px 349px 18px 30px;
+    width: 97%;
+    padding-left: 15px;
+    padding-top: 18px;
+    padding-bottom: 18px;
     margin: 10px 0px;
     font-size: 16px;
     font-weight: 400;
